--- a/slides/cap_plm.tex
+++ b/slides/cap_plm.tex
@@ -450,7 +450,7 @@ Aunque ambas oraciones carecen de significado, Chomsky argumentó que solo la pr
 La derivación de probabilidades en modelos de lenguaje probabilísticos implica tres pasos:
     \begin{enumerate}
         \item Expandir $p(w_1, w_2, \ldots, w_n)$ usando la regla de la Cadena.
-        \item Aplicar las Asunciones de Independencia de Markov \\
+        \item Aplicar los supuestos Independencia de Markov \\
         $p(w_i | w_1, w_2, \ldots, w_{i-2}, w_{i-1}) = p(w_i | w_{i-2}, w_{i-1})$.
         \item Suavizar las estimaciones utilizando conteos de orden inferior.
     \end{enumerate}
