--- a/slides/cap_ir.tex
+++ b/slides/cap_ir.tex
@@ -314,7 +314,7 @@ ACTRESS & GOVERNMENT & CARE & ELEMENTARY \\
 LOVE & CONGRESS & LIFE & HAITI \\
 \hline
 \end{tabular}
-\caption{Ejemplo de 4 tópicos y sus 15 palabras más proables.}
+\caption{Ejemplo de 4 tópicos y sus 15 palabras más probables.}
 \label{tab:lda}
 \end{table}
 
